[project]
name = "learning-muscleabm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
